--- a/micro-sa-token/micro-sa-token-api/src/main/resources/application.yml
+++ b/micro-sa-token/micro-sa-token-api/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
+        username: nacos
+        password: nacos
+        namespace: sa-token
 
 # Sa-Token配置
 sa-token:
