--- a/micro-sa-token/micro-sa-token-gateway/src/main/resources/application.yml
+++ b/micro-sa-token/micro-sa-token-gateway/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
     nacos:
       discovery:
         server-addr: localhost:8848
+        username: nacos
+        password: nacos
+        namespace: sa-token
     gateway:
       routes: #配置路由路径
         - id: oauth2-api-route
